[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/enemy/rat-idle.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemy.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemy/rat-attack.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemy/rat-run.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.875, 10.5625 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 137, 53.75 )

[sub_resource type="Theme" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 23 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("run:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("idle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1.091, 1 ), Vector2( -1.374, 1 ), Vector2( -1.374, 1.201 ), Vector2( -1.296, 1.302 ), Vector2( -1.164, 1.152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("idle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
tracks/0/type = "value"
tracks/0/path = NodePath("run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 1 ]
}

[node name="enemy_rat" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="idle" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 13 )
scale = Vector2( -1.164, 1.152 )
texture = ExtResource( 1 )
hframes = 6

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( -2, 18 )
shape = SubResource( 1 )

[node name="cast" type="RayCast2D" parent="."]
visible = false
position = Vector2( -43, -1 )
enabled = true
cast_to = Vector2( -72, -1 )

[node name="area_angry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_angry"]
visible = false
position = Vector2( -1, 16 )
shape = SubResource( 2 )

[node name="hp" type="Label" parent="."]
margin_left = -14.0
margin_top = -19.0
margin_right = 26.0
margin_bottom = -5.0
theme = SubResource( 8 )
text = "5"

[node name="dmg_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dmg_zone"]
position = Vector2( -2, 18 )
shape = SubResource( 1 )

[node name="attack_timer" type="Timer" parent="."]

[node name="attack_zone" type="Area2D" parent="." groups=["enemy_weapon"]]

[node name="Collision" type="CollisionShape2D" parent="attack_zone"]
position = Vector2( -27, 2 )
shape = SubResource( 3 )

[node name="anima" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/attack = SubResource( 6 )
anims/die = SubResource( 9 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 7 )

[node name="attack" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, 13 )
flip_h = true
hframes = 6

[node name="run" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
offset = Vector2( 0, 13 )
flip_h = true
hframes = 6

[connection signal="body_entered" from="area_angry" to="." method="_on_area_angry_body_entered"]
[connection signal="area_entered" from="dmg_zone" to="." method="_on_dmg_zone_area_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="attack_zone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="attack_zone" to="." method="_on_attack_zone_body_exited"]
[connection signal="body_shape_entered" from="attack_zone" to="." method="_on_attack_zone_body_shape_entered"]
